--- a/slides/slides5.html
+++ b/slides/slides5.html
@@ -8,7 +8,7 @@
     <script src="slides5_files/htmlwidgets-1.5.4/htmlwidgets.js"></script>
     <script src="slides5_files/viz-1.8.2/viz.js"></script>
     <link href="slides5_files/DiagrammeR-styles-0.2/styles.css" rel="stylesheet" />
-    <script src="slides5_files/grViz-binding-1.0.8/grViz.js"></script>
+    <script src="slides5_files/grViz-binding-1.0.7/grViz.js"></script>
     <script src="slides5_files/kePrint-0.0.1/kePrint.js"></script>
     <link href="slides5_files/lightable-0.0.1/lightable.css" rel="stylesheet" />
     <link rel="stylesheet" href="xaringan-themer.css" type="text/css" />
@@ -35,8 +35,8 @@ class: middle, center
 ## A basic before event - after event comparison
 
 &lt;center&gt;
-<div id="htmlwidget-85fb1533f93165168a75" style="width:800px;height:300px;" class="grViz html-widget"></div>
-<script type="application/json" data-for="htmlwidget-85fb1533f93165168a75">{"x":{"diagram":"\n  digraph event{\n  node [shape = box]\n  subgraph{\n    rank = same; \"Event Happened\", Treatment, Outcome\n  }\n  \"Event Happened\" -> Treatment -> Outcome\n  Time -> {\"Event Happened\", Outcome}\n  }\n","config":{"engine":"dot","options":null}},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-6aa090e9e1ecf9b6e788" style="width:800px;height:300px;" class="grViz html-widget"></div>
+<script type="application/json" data-for="htmlwidget-6aa090e9e1ecf9b6e788">{"x":{"diagram":"\n  digraph event{\n  node [shape = box]\n  subgraph{\n    rank = same; \"Event Happened\", Treatment, Outcome\n  }\n  \"Event Happened\" -> Treatment -> Outcome\n  Time -> {\"Event Happened\", Outcome}\n  }\n","config":{"engine":"dot","options":null}},"evals":[],"jsHooks":[]}</script>
 &lt;/center&gt;
 
 [Chapter 17 Event Studies in The Effect]()
@@ -72,8 +72,8 @@ We do not observe the yellow/gold returns. We have to estimate them or convince 
 ## Front-running, information leaking, and anticipation are all very annoying.
 
 &lt;center&gt;
-<div id="htmlwidget-a70f584a394a6fd65c7b" style="width:800px;height:200px;" class="grViz html-widget"></div>
-<script type="application/json" data-for="htmlwidget-a70f584a394a6fd65c7b">{"x":{"diagram":"\n  digraph event{\n  node [shape = box]\n  subgraph{\n    rank = same; \"Before Block Trade\", \"Large Block Trade\", \"Price Impact\"\n  }\n  \"Before Block Trade\" -> \"Large Block Trade\" -> \"Price Impact\"\n  Time -> {\"Before Block Trade\", \"Price Impact\"}\n  }\n","config":{"engine":"dot","options":null}},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-f0bd7b00afd32dbb9d08" style="width:800px;height:200px;" class="grViz html-widget"></div>
+<script type="application/json" data-for="htmlwidget-f0bd7b00afd32dbb9d08">{"x":{"diagram":"\n  digraph event{\n  node [shape = box]\n  subgraph{\n    rank = same; \"Before Block Trade\", \"Large Block Trade\", \"Price Impact\"\n  }\n  \"Before Block Trade\" -> \"Large Block Trade\" -> \"Price Impact\"\n  Time -> {\"Before Block Trade\", \"Price Impact\"}\n  }\n","config":{"engine":"dot","options":null}},"evals":[],"jsHooks":[]}</script>
 &lt;/center&gt;
 
 --
@@ -90,14 +90,6 @@ Go also back to Assignment 2 where we modeled the same problem when investors an
 
 ---
 
-
-## Mergers and Acquisitions and event study
-
-   TODO
-
----
-
-class: middle, center
 
 # Difference-in-Difference
 
@@ -162,7 +154,8 @@ rd_did_panel %&gt;%
 ```
 
 ```
-## `summarise()` has grouped output by 'time'. You can override using the `.groups` argument.
+## `summarise()` has grouped output by 'time'. You can override using the `.groups`
+## argument.
 ```
 
 ```
@@ -170,10 +163,10 @@ rd_did_panel %&gt;%
 ## # Groups:   time [2]
 ##    time report2 profit_report profit_no_report causal_effect
 ##   &lt;int&gt; &lt;lgl&gt;           &lt;dbl&gt;            &lt;dbl&gt;         &lt;dbl&gt;
-## 1     1 FALSE           13.4              8.37             5
-## 2     1 TRUE            10.1              5.15             5
-## 3     2 FALSE            9.62             4.62             5
-## 4     2 TRUE             6.64             1.64             5
+## 1     1 FALSE           13.2              8.16             5
+## 2     1 TRUE             9.97             4.97             5
+## 3     2 FALSE            9.61             4.61             5
+## 4     2 TRUE             6.53             1.53             5
 ```
 
 ---
@@ -189,15 +182,16 @@ rd_did_panel %&gt;%
 ```
 
 ```
-## `summarise()` has grouped output by 'time'. You can override using the `.groups` argument.
+## `summarise()` has grouped output by 'time'. You can override using the `.groups`
+## argument.
 ```
 
 ```
 ## # A tibble: 2 × 3
 ##   report2   `1`   `2`
 ##   &lt;lgl&gt;   &lt;dbl&gt; &lt;dbl&gt;
-## 1 FALSE    8.37  4.62
-## 2 TRUE     5.15  6.64
+## 1 FALSE    8.16  4.61
+## 2 TRUE     4.97  6.53
 ```
 
 ---
@@ -228,31 +222,31 @@ msummary(list(simple = did_lm, "time 2" = did_sub, "firm FE" = did_fixed, "two-w
 &lt;tbody&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; (Intercept) &lt;/td&gt;
-   &lt;td style="text-align:center;"&gt; 5.699\*\*\* &lt;/td&gt;
-   &lt;td style="text-align:center;"&gt; 4.622\*\*\* &lt;/td&gt;
+   &lt;td style="text-align:center;"&gt; 5.409\*\*\* &lt;/td&gt;
+   &lt;td style="text-align:center;"&gt; 4.610\*\*\* &lt;/td&gt;
    &lt;td style="text-align:center;"&gt;  &lt;/td&gt;
    &lt;td style="text-align:center;"&gt;  &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt;  &lt;/td&gt;
-   &lt;td style="text-align:center;"&gt; (0.149) &lt;/td&gt;
-   &lt;td style="text-align:center;"&gt; (0.312) &lt;/td&gt;
+   &lt;td style="text-align:center;"&gt; (0.158) &lt;/td&gt;
+   &lt;td style="text-align:center;"&gt; (0.389) &lt;/td&gt;
    &lt;td style="text-align:center;"&gt;  &lt;/td&gt;
    &lt;td style="text-align:center;"&gt;  &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; report &lt;/td&gt;
-   &lt;td style="text-align:center;"&gt; 0.937\*\*\* &lt;/td&gt;
-   &lt;td style="text-align:center;"&gt; 2.014\*\*\* &lt;/td&gt;
-   &lt;td style="text-align:center;"&gt; 1.487\*\*\* &lt;/td&gt;
-   &lt;td style="text-align:center;"&gt; 5.237\*\*\* &lt;/td&gt;
+   &lt;td style="text-align:center;"&gt; 1.122\*\*\* &lt;/td&gt;
+   &lt;td style="text-align:center;"&gt; 1.920\*\*\* &lt;/td&gt;
+   &lt;td style="text-align:center;"&gt; 1.557\*\*\* &lt;/td&gt;
+   &lt;td style="text-align:center;"&gt; 5.109\*\*\* &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;box-shadow: 0px 1px"&gt;  &lt;/td&gt;
-   &lt;td style="text-align:center;box-shadow: 0px 1px"&gt; (0.245) &lt;/td&gt;
-   &lt;td style="text-align:center;box-shadow: 0px 1px"&gt; (0.362) &lt;/td&gt;
-   &lt;td style="text-align:center;box-shadow: 0px 1px"&gt; (0.241) &lt;/td&gt;
-   &lt;td style="text-align:center;box-shadow: 0px 1px"&gt; (0.432) &lt;/td&gt;
+   &lt;td style="text-align:center;box-shadow: 0px 1px"&gt; (0.247) &lt;/td&gt;
+   &lt;td style="text-align:center;box-shadow: 0px 1px"&gt; (0.430) &lt;/td&gt;
+   &lt;td style="text-align:center;box-shadow: 0px 1px"&gt; (0.215) &lt;/td&gt;
+   &lt;td style="text-align:center;box-shadow: 0px 1px"&gt; (0.576) &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; Num.Obs. &lt;/td&gt;
@@ -263,17 +257,17 @@ msummary(list(simple = did_lm, "time 2" = did_sub, "firm FE" = did_fixed, "two-w
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; R2 &lt;/td&gt;
-   &lt;td style="text-align:center;"&gt; 0.014 &lt;/td&gt;
-   &lt;td style="text-align:center;"&gt; 0.058 &lt;/td&gt;
-   &lt;td style="text-align:center;"&gt; 0.580 &lt;/td&gt;
-   &lt;td style="text-align:center;"&gt; 0.643 &lt;/td&gt;
+   &lt;td style="text-align:center;"&gt; 0.020 &lt;/td&gt;
+   &lt;td style="text-align:center;"&gt; 0.039 &lt;/td&gt;
+   &lt;td style="text-align:center;"&gt; 0.626 &lt;/td&gt;
+   &lt;td style="text-align:center;"&gt; 0.664 &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; R2 Within &lt;/td&gt;
    &lt;td style="text-align:center;"&gt;  &lt;/td&gt;
    &lt;td style="text-align:center;"&gt;  &lt;/td&gt;
-   &lt;td style="text-align:center;"&gt; 0.064 &lt;/td&gt;
-   &lt;td style="text-align:center;"&gt; 0.205 &lt;/td&gt;
+   &lt;td style="text-align:center;"&gt; 0.081 &lt;/td&gt;
+   &lt;td style="text-align:center;"&gt; 0.162 &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; Std.Errors &lt;/td&gt;
@@ -397,7 +391,8 @@ causal_effects &lt;- rd_did3_panel %&gt;%
 ```
 
 ```
-## `summarise()` has grouped output by 'time'. You can override using the `.groups` argument.
+## `summarise()` has grouped output by 'time'. You can override using the `.groups`
+## argument.
 ```
 
 ---
@@ -427,108 +422,108 @@ causal_effects %&gt;% knitr::kable(digits = 2)
    &lt;td style="text-align:right;"&gt; 1 &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 1 &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 0 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 145 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 8.47 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 8.47 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 132 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 8.67 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 8.67 &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 0.00 &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:right;"&gt; 1 &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 2 &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 0 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 159 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 8.33 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 8.33 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 168 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 8.14 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 8.14 &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 0.00 &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:right;"&gt; 1 &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 3 &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 0 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 162 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 5.81 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 5.81 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 0.00 &lt;/td&gt;
-  &lt;/tr&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:right;"&gt; 1 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 4 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 0 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 534 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 160 &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 4.85 &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 4.85 &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 0.00 &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
+   &lt;td style="text-align:right;"&gt; 1 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 4 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 0 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 540 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 5.18 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 5.18 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 0.00 &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
    &lt;td style="text-align:right;"&gt; 2 &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 1 &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 0 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 145 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 10.44 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 5.44 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 132 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 9.85 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 4.85 &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 5.00 &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:right;"&gt; 2 &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 2 &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 0 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 159 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 9.29 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 4.29 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 168 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 9.47 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 4.47 &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 5.00 &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:right;"&gt; 2 &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 3 &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 1 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 162 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 6.69 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 1.69 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 160 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 6.11 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 1.11 &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 5.00 &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:right;"&gt; 2 &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 4 &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 1 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 534 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 6.24 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 1.24 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 540 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 6.60 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 1.60 &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 5.00 &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:right;"&gt; 3 &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 1 &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 0 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 145 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 5.66 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 3.33 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 132 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 5.34 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 3.01 &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 2.33 &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:right;"&gt; 3 &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 2 &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 1 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 159 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 6.20 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 3.87 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 168 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 5.87 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 3.54 &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 2.33 &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:right;"&gt; 3 &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 3 &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 1 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 162 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 3.92 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 1.58 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 160 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 2.16 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; -0.17 &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 2.33 &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:right;"&gt; 3 &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 4 &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 1 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 534 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 7.32 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 0.65 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 540 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 7.57 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 0.90 &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 6.67 &lt;/td&gt;
   &lt;/tr&gt;
 &lt;/tbody&gt;
@@ -573,15 +568,15 @@ msummary(list("time 1 and 2" = twoway12, "time 1 and 3" = twoway13,
 &lt;tbody&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; report &lt;/td&gt;
-   &lt;td style="text-align:center;"&gt; 4.829*** &lt;/td&gt;
-   &lt;td style="text-align:center;"&gt; 5.927*** &lt;/td&gt;
-   &lt;td style="text-align:center;"&gt; 4.347*** &lt;/td&gt;
+   &lt;td style="text-align:center;"&gt; 5.124*** &lt;/td&gt;
+   &lt;td style="text-align:center;"&gt; 6.219*** &lt;/td&gt;
+   &lt;td style="text-align:center;"&gt; 4.400*** &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;box-shadow: 0px 1px"&gt;  &lt;/td&gt;
-   &lt;td style="text-align:center;box-shadow: 0px 1px"&gt; (0.484) &lt;/td&gt;
-   &lt;td style="text-align:center;box-shadow: 0px 1px"&gt; (0.635) &lt;/td&gt;
-   &lt;td style="text-align:center;box-shadow: 0px 1px"&gt; (0.414) &lt;/td&gt;
+   &lt;td style="text-align:center;box-shadow: 0px 1px"&gt; (0.488) &lt;/td&gt;
+   &lt;td style="text-align:center;box-shadow: 0px 1px"&gt; (0.685) &lt;/td&gt;
+   &lt;td style="text-align:center;box-shadow: 0px 1px"&gt; (0.426) &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; Num.Obs. &lt;/td&gt;
@@ -591,14 +586,14 @@ msummary(list("time 1 and 2" = twoway12, "time 1 and 3" = twoway13,
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; R2 &lt;/td&gt;
-   &lt;td style="text-align:center;"&gt; 0.590 &lt;/td&gt;
-   &lt;td style="text-align:center;"&gt; 0.550 &lt;/td&gt;
-   &lt;td style="text-align:center;"&gt; 0.422 &lt;/td&gt;
+   &lt;td style="text-align:center;"&gt; 0.588 &lt;/td&gt;
+   &lt;td style="text-align:center;"&gt; 0.577 &lt;/td&gt;
+   &lt;td style="text-align:center;"&gt; 0.429 &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; R2 Within &lt;/td&gt;
-   &lt;td style="text-align:center;"&gt; 0.090 &lt;/td&gt;
-   &lt;td style="text-align:center;"&gt; 0.074 &lt;/td&gt;
+   &lt;td style="text-align:center;"&gt; 0.099 &lt;/td&gt;
+   &lt;td style="text-align:center;"&gt; 0.075 &lt;/td&gt;
    &lt;td style="text-align:center;"&gt; 0.053 &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
@@ -975,7 +970,6 @@ class: middle
 ---
 
 # When should you cluster?
-
 ### [Abadie, Athey, Imbens, and Wooldridge (2017)](http://economics.mit.edu/files/13927)
 
 &gt; What is the level of the treatment variable? What is the comparison?
